assets/css/main.css
@charset 'UTF-8';

/* --- CSS Variables ---------------------------------------------- */
:root {
  --FG: 255, 255, 255;
  --BG1: 30, 28, 27;
  --BG2: 28, 26, 25;
  --HL: 63, 154, 44;
  --BD: 70, 70, 69;
  --NV: none;
  --PAGE_WIDTH: 960px;
  --BIG: 32px;
  --MED: 16px;
  --SML: 8px;
  --QRT: 4px;
  --TNY: 2px;
}

/* --- Fonts ------------------------------------------------------ */
@font-face {
  font-display: swap;
  font-family: 'EBGaramond12';
  font-style: normal;
  src: url('/font/EBGaramond12.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'EBGaramond12';
  font-style: italic;
  src: url('/font/EBGaramond12-Italic.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'IBMPlex';
  font-style: normal;
  font-stretch: 100%;
  font-weight: 100 700;
  src: url('/font/IBMPlexSans.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'IBMPlex';
  font-style: italic;
  font-stretch: 100%;
  src: url('/font/IBMPlexSans-Italic.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'IBMPlexMono';
  font-weight: 400;
  font-style: normal;
  src: url('/font/IBMPlexMono.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'IBMPlexMono';
  font-weight: 400;
  font-style: italic;
  src: url('/font/IBMPlexMono-Italic.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'IBMPlexMono';
  font-weight: 700;
  font-style: normal;
  src: url('/font/IBMPlexMono-Bold.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'IBMPlexMono';
  font-weight: 700;
  font-style: italic;
  src: url('/font/IBMPlexMono-BoldItalic.woff2') format('woff2');
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'EBGaramond12', 'Cambria', serif;
  font-weight: normal; /* Garamond does not have bold. */
  font-feature-settings:
    'liga', 'xtex', 'hlig', 'clig', 'dlig', 'calt', 'swsh', 'cv11';
}

body {
  font-family: 'IBMPlex', 'Helvetica', sans-serif;
  font-size: 12pt;
  font-weight: 300;
  line-height: 1.35;
}

header h1 {
  font-size: 36px;
}

figcaption,
caption {
  font-size: 10pt;
}

/* --- Structure -------------------------------------------------- */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  min-height: 100%;
}

body {
  min-height: 100vh;
  margin: 0 auto;
  max-width: var(--PAGE_WIDTH);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

header {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

header h1,
header nav {
  align-self: center;
}

header h1 a.title {
  color: rgb(var(--FG));
  font-weight: normal;
}

header h1 a.title:hover {
  color: rgb(var(--HL));
}

header nav {
  display: flex;
  column-gap: 1em;
}

main {
  flex-grow: 1;
}

footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

div.description span.beginning {
  font-family: 'IBMPlexMono', monospace;
  min-width: 11ch;
}

div.description span.beginning a:hover {
  font-weight: 700;
}

div.description span.middle {
  min-width: 3ch;
  display: flex;
  justify-content: center;
}

div.description span.end {
  flex-grow: 1;
}

/*
  Add me to the parent container where the ph icon and text is
  contained to line up the icon and the text in the middle.
 */
.ph-duotone-flex-align-items-center {
  display: flex;
  gap: var(--QRT);
  align-items: center;
}

div.title-date-taxonomy {
  display: flex;
  flex-direction: column;
}

div.title-date-taxonomy h1 {
  margin: 0;
  padding: 0;
  font-size: var(--BIG);
}

/* --- Spacing ---------------------------------------------------- */
header {
  padding-top: var(--SML);
  padding-bottom: var(--SML);
}

main {
  padding-top: var(--SML);
  padding-bottom: var(--SML);
  padding-left: var(--MED);
  padding-right: var(--MED);
}

table caption {
  margin-bottom: var(--TNY);
}

footer {
  padding-top: var(--QRT);
  padding-bottom: var(--QRT);
  padding-left: var(--MED);
  padding-right: var(--MED);
}

.with-divider {
  margin-bottom: 0;
}

.with-divider + * {
  margin-top: 0;
}

/* --- Colour & Styles -------------------------------------------- */
html {
  background-color: rgb(var(--BG1));
}

body {
  color: rgb(var(--FG));
  background-color: rgb(var(--BG2));
}

nav a::before {
  content: '[ ';
}

nav a::after {
  content: ' ]';
}

a {
  color: rgb(var(--HL));
  text-decoration: none;
}

a:hover {
  font-weight: 350;
}

nav a {
  color: rgb(var(--FG));
  cursor: pointer;
  filter: var(--NV);
  background: linear-gradient(to right, rgb(var(--HL)) 50%, transparent 50%);
  background-size: 201% 100%;
  background-position: right bottom;
  transition: background 0.25s ease;
}

nav a:hover {
  filter: var(--NV);
  background-position: left bottom;
  transition: background 0.25s ease;
}

nav a::selection {
  color: rgb(var(--FG));
  background: rgba(var(--BD), 0.18);
}

html:has(#light:checked) {
  --FG: 0, 0, 0;
  --BG1: 250, 250, 250;
  --BG2: 255, 255, 255;
  --HL: 65, 105, 225;
  --BD: 205, 211, 201;
  --NV: brightness(200%);
}

input[type='checkbox'] {
  accent-color: rgb(var(--HL));
}

li::marker {
  color: rgb(var(--HL));
}

header.banner,
footer.banner {
  background-color: rgb(var(--BD));
}

footer a {
  color: rgb(var(--FG));
}

footer div label:hover {
  cursor: pointer;
  user-select: none;
}

.with-divider {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.with-divider:before,
.with-divider:after {
  content: '';
  flex: 1 1;
  border-bottom: 1px rgb(var(--BD)) solid;
}

.with-divider:before {
  margin-right: var(--SML);
}

.with-divider:after {
  margin-left: var(--SML);
}

#light {
  position: absolute;
  left: -100vw;
}

#light:checked ~ label > *:last-child {
  display: none;
}

#light:not(:checked) ~ label > *:first-child {
  display: none;
}

/* --- Markdown --------------------------------------------------- */
main p,
main h1,
main h2,
main h3,
main h4,
main h5,
main h6 {
  margin: revert;
}

main > *:first-child,
main > figure:first-child + *,
main > article:first-child > *:first-child {
  margin-top: 0em;
  padding-top: 0em;
}

main table {
  margin: var(--MED) auto;
  border-collapse: collapse;
  border-left: var(--TNY) solid rgb(var(--BD));
  border-right: var(--TNY) solid rgb(var(--BD));
}

mjx-container[display='true'],
pre,
div.table-wrapper {
  overflow-x: auto;
  overflow-y: hidden;
}

main th,
main td {
  border-top: var(--TNY) solid rgb(var(--BD));
  border-bottom: var(--TNY) solid rgb(var(--BD));
  padding: var(--TNY) var(--MED);
}

figure {
  margin: var(--MED) auto;
  text-align: center;
}

img {
  max-width: 100%;
}

figure img {
  vertical-align: middle;
}

figcaption {
  margin-top: var(--QRT);
}

ol {
  list-style-type: decimal;
}

main ul,
main ol {
  margin: var(--MED) var(--BIG);
}

main ul ul,
main ul ol,
main ol ul,
main ol ol {
  margin-top: 0em;
  margin-bottom: 0em;
}

ol > li > ol {
  list-style-type: lower-roman;
}

ol > li > ol > li > ol {
  list-style-type: lower-alpha;
}

li:has(> input[type='checkbox']) {
  list-style-type: none;
}

main pre,
main code,
main kbd,
main samp,
main tt {
  font-family: 'IBMPlexMono', monospace;
}

main pre,
main code {
  background: rgba(var(--BD), 0.2);
}

code {
  /* https://nathan.rs/posts/fixing-ios-codeblocks/ */
  text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

main blockquote {
  font-weight: 350;
  background: rgba(var(--BD), 0.2);
  border-left: var(--TNY) solid rgb(var(--HL));
  margin: var(--MED) var(--BIG);
  padding: var(--SML) var(--MED);
}

main blockquote p:first-child,
main blockquote p:last-child {
  margin: 0;
}

main pre code {
  /* avoid double highlight */
  background: none;
}

.image-right {
  float: right;
  max-width: 33.333%;
  margin-left: var(--SML);
}

.image-fifteen {
  max-width: 70%;
}

/* --- Mobile ----------------------------------------------------- */

/* @media only screen and (max-width: 750px) { */
/* } */

/* --- Debugging -------------------------------------------------- */
/* html { */
/*   border: 2px dotted red; */
/* } */
/* body { */
/*   border: 2px dotted purple; */
/* } */
/* header { */
/*   border: 2px dotted green; */
/* } */
/* main { */
/*   border: 2px dotted green; */
/* } */
/* footer { */
/*   border: 2px dotted green; */
/* } */
/* header h1, header nav { */
/*   border: 2px dotted navy; */
/* } */
/* footer div { */
/*   border: 2px dotted navy; */
/* } */

